# bindash

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  how-to-reproduce-benchmark-results.txt  how-to-reproduce-the-results-in-the-paper
benchmark/: assembly_summary_2018032200.txt  combine-fna-gz.py  download-refseq.py  evaluate-output.py
benchmark/testdata/: testgenome1.fna  testgenome2.fna
src/: bhmath.hpp  bindash.cpp  binhash.cpp  cbuffer.hpp  commands.hpp  genome.hpp  hashutils.hpp  kmerset.hpp  xxhash_header_only.h
src/extmath/: ibeta.h
src/rollinghashcpp/: .travis.yml  Makefile  README.md  characterhash.h  cyclichash.h  example.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example64bits.cpp  generalhash.h  mersennetwister.h  rabinkarphash.h  speedtesting.cpp  threewisehash.h  unit.cpp  ztimer.h
src/test/: densify_test.cpp  test_bhmath.cpp
